add styles for help section

--- a/src/works.html
+++ b/src/works.html
@@ -152,7 +152,7 @@
         <div class="works__item">
           <div class="works__img-wrapper">
             <img
-              src="./images/incrise.svg"
+              src="./images/works/dress.svg"
               alt="Dress Icon"
               class="works__img"
               loading="lazy"
@@ -168,7 +168,7 @@
         <div class="works__item">
           <div class="works__img-wrapper">
             <img
-              src="./images/incrise.svg"
+              src="./images/works/phone.svg"
               alt="Phone Icon"
               class="works__img"
               loading="lazy"
@@ -184,7 +184,7 @@
         <div class="works__item">
           <div class="works__img-wrapper">
             <img
-              src="./images/incrise.svg"
+              src="./images/works/calendar.svg"
               alt="Calendar Icon"
               class="works__img"
               loading="lazy"
@@ -202,9 +202,9 @@
     </section>
 
     <section class="help">
-      <div class="block-child-wrap">
-        <div class="help__faq">
-          <h3 class="section-title help__title">
+      <div class="help__container">
+        <div class="help__section help__faq">
+          <h3 class="section-title help__title help__title--faq">
             Pay on time and stay fee-free
           </h3>
           <p class="faq__descr">
@@ -217,23 +217,24 @@
           </p>
           <p class="faq__descr">
             See
-            <a href="#" class="faq__link" target="_blank" rel="noopener">FAQ</a>
-            for details
+            <!-- TODO: Change link to https://consumer.myopenpay.co.uk/help when Customer Portal UK will be in production -->
+            <a href="https://customerportal.dev.myopenpay.co.uk/help" class="help__link" target="_blank" rel="noopener">FAQ</a>
+            for details.
           </p>
         </div>
 
-        <div class="help__contacts">
+        <div class="help__section help__contacts">
           <h3 class="section-title help__title">We’re here to help</h3>
           <div class="help__img-wrapper">
             <img
-              src="./images/incrise.svg"
-              alt="Service Icon"
+              src="./images/works/help.svg"
+              alt="Help Icon"
               class="help__img"
               loading="lazy"
             />
           </div>
           <p class="contacts__text">
-            <a href="mailto:info@myopenpay.co.uk" class="contacts__email"
+            <a href="mailto:info@myopenpay.co.uk" class="help__link"
               >Email us</a
             >, or give us a call on
             <a href="tel:0800 193 0553" class="contacts__phone">0800 193 0553</a
