--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
       </div>
 
       <div class="feedback_item">
-        <h2 class="feedback_title">Shop smarter.</h2>
+        <h2 class="feedback_title feedback_title--padding">Shop smarter.</h2>
         <div class="feedback__Interested">
           <label class="feedback_text feedback_text--signup" for="signup">
             Interested? Sign up below to learn more.
