delete header logo transition and target blank attribute for the Legal page

--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -221,7 +221,7 @@
                         <a href="/contact" class="paragraphSpec-3">Contact us</a>
                     </li>
                     <li>
-                        <a href="./legal" target="_blank" class="paragraphSpec-3">Legal</a>
+                        <a href="./legal" class="paragraphSpec-3">Legal</a>
                     </li>
                 </ul>
             </nav>
