--- a/src/index.html
+++ b/src/index.html
@@ -230,7 +230,7 @@
             <a href="/contact" class="paragraphSpec-3">Contact us</a>
           </li>
           <li>
-            <a href="./legal" target="_blank" class="paragraphSpec-3">Legal</a>
+            <a href="./legal" class="paragraphSpec-3">Legal</a>
           </li>
         </ul>
       </nav>
