--- a/src/works.html
+++ b/src/works.html
@@ -231,7 +231,7 @@
             <a href="/contact" class="paragraphSpec-3">Contact us</a>
           </li>
           <li>
-            <a href="./legal" target="_blank" class="paragraphSpec-3">Legal</a>
+            <a href="./legal" class="paragraphSpec-3">Legal</a>
           </li>
         </ul>
       </nav>
