update faq link on the Works page

--- a/src/works.html
+++ b/src/works.html
@@ -186,8 +186,7 @@
         </p>
         <p class="faq__descr">
           See
-          <!-- TODO: Change link to https://consumer.myopenpay.co.uk/help when Customer Portal UK will be in production -->
-          <a href="https://customerportal.dev.myopenpay.co.uk/help" class="help__link" target="_blank"
+          <a href="https://consumer.myopenpay.co.uk/help" class="help__link" target="_blank"
             rel="noopener">FAQ</a>
           for details.
         </p>
