add copyright text

--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -229,8 +229,11 @@
                 <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" loading="lazy"/>
             </a>
             <p class="copyright">
-                © Openpay | Made in Melbourne
-            </p>
+                © 2019 Openpay
+              </p>
+              <p class="copyright__text">
+                Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered office at 49 Greek St, London, United Kingdom, W1D4EG
+              </p>
         </footer>
     </div>
 
