Adding Cookie Policy and updating links from popup

--- a/src/get-in-touch.html
+++ b/src/get-in-touch.html
@@ -239,7 +239,7 @@
 
     <div class="cookie-popup">
         We uses cookies to give you the best browsing experience.
-        <a href="./docs/privacy-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a>
+        <a href="./docs/cookie-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a>
         or adjust your settings.
         <button class="cookie-popup__button">Accept</button>
     </div>
