--- a/src/legal.html
+++ b/src/legal.html
@@ -135,6 +135,9 @@
           <div class="legal__link-wrapper">
             <a href="./docs/privacy-policy.pdf" target="_blank" class="legal__link">Privacy Policy (PDF)</a>
           </div>
+          <div class="legal__link-wrapper">
+            <a href="./docs/cookie-policy.pdf" target="_blank" class="legal__link">Cookie Policy (PDF)</a>
+          </div>
         </div>
 
         <div class="content__legal-item">
@@ -188,7 +191,7 @@
 
   <div class="cookie-popup">
     We uses cookies to give you the best browsing experience.
-    <a href="./docs/privacy-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a>
+    <a href="./docs/cookie-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a>
     or adjust your settings.
     <button class="cookie-popup__button">Accept</button>
   </div>
