--- a/src/business.html
+++ b/src/business.html
@@ -265,7 +265,7 @@
   </div>
 
   <div class="cookie-popup">
-    We uses cookies to give you the best browsing experience. <a href="./docs/privacy-policy.pdf"
+    We uses cookies to give you the best browsing experience. <a href="./docs/cookie-policy.pdf"
       class="cookie-popup__link" target="_blank">Find out more</a> or adjust your settings.
     <button class="cookie-popup__button">Accept</button>
   </div>
