--- a/src/index.html
+++ b/src/index.html
@@ -230,12 +230,15 @@
             <a href="/contact" class="paragraphSpec-3">Contact us</a>
           </li>
           <li>
+            <a href="/faq" class="paragraphSpec-3">FAQ</a>
+          </li>
+          <li>
             <a href="./legal" class="paragraphSpec-3">Legal</a>
           </li>
         </ul>
       </nav>
       <a href="/">
-        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" loading="lazy" />
+        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
       </a>
       <p class="copyright">
         © 2019 Openpay
