--- a/src/legal.html
+++ b/src/legal.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Openpay Legal Stuff</title>
+  <title>Openpay Legal Information</title>
   <meta name="description" content="Openpay Welcome to a smarter way to pay" />
   <!-- Google Tag Manager -->
   <script>
@@ -99,7 +99,7 @@
       <nav class="header-nav header-nav_disable">
         <ul class="nav-list">
           <li>
-              <a href="/works" class="paragraphSpec-4">How it works</a>
+            <a href="/works" class="paragraphSpec-4">How it works</a>
           </li>
           <li>
             <a href="/business" class="paragraphSpec-4">I'm a business</a>
@@ -114,13 +114,13 @@
 
   <section class="hero">
     <div class="block-child-wrap">
-      <h1 class="hero__title">Legal Stuff.</h1>
+      <h1 class="hero__title">Legal.</h1>
     </div>
   </section>
 
   <section class="content">
     <div class="block-child-wrap">
-      <h2 class="content__title">The Legal Stuff</h2>
+      <h2 class="content__title">Legal Information</h2>
       <p class="content__text">
         Find all the important compliance information that governs our
         industry and more.
@@ -173,18 +173,22 @@
             <a href="/contact" class="paragraphSpec-3">Contact us</a>
           </li>
           <li>
+            <a href="/faq" class="paragraphSpec-3">FAQ</a>
+          </li>
+          <li>
             <a href="./legal" class="paragraphSpec-3">Legal</a>
           </li>
         </ul>
       </nav>
       <a href="/">
-        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" loading="lazy"/>
+        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
       </a>
       <p class="copyright">
         © 2019 Openpay
       </p>
       <p class="copyright__text">
-        Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered office at 49 Greek St, London, United Kingdom, W1D4EG
+        Openpay UK Limited is a company registered in England and Wales (Company Number 11422596) with it's registered
+        office at 49 Greek St, London, United Kingdom, W1D4EG
       </p>
     </footer>
   </div>
