added 'back to top buttons' and lazy loading to footer logo

--- a/src/business.html
+++ b/src/business.html
@@ -256,7 +256,7 @@
         </ul>
       </nav>
       <a href="/">
-        <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
+        <img src="./images/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
       </a>
       <p class="copyright">
         © 2019 Openpay
