--- a/src/faq.html
+++ b/src/faq.html
@@ -114,7 +114,7 @@
     </div>
 
 
-    <section class="contact">
+    <section class="faq" id="faq">
         <div class="faq__wrapper">
             <h1>Frequently asked question</h1>
             <p>
@@ -122,19 +122,19 @@
             </p>
             <ul class="link-list">
                 <li>
-                    <a href="#general">General</a>
+                    <a class="faq-link" href="#general">General</a>
                 </li>
                 <li>
-                    <a href="#using-openpay">Using Openpay</a>
+                    <a class="faq-link" href="#using-openpay">Using Openpay</a>
                 </li>
                 <li>
-                    <a href="#payments">Payments</a>
+                    <a class="faq-link" href="#payments">Payments</a>
                 </li>
                 <li>
-                    <a href="#fees">Fees</a>
+                    <a class="faq-link" href="#fees">Fees</a>
                 </li>
                 <li>
-                    <a href="#return">Returns</a>
+                    <a class="faq-link" href="#returns">Returns</a>
                 </li>
             </ul>
             <div class="faq-section" id="general">
@@ -149,6 +149,7 @@
                         instalments. Pay over two or three months depending on the merchant) with no hidden fees and no
                         interest, ever.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -159,6 +160,7 @@
                         plans. Sign up with a few simple details and pay off your purchases in two or three months. It’s
                         free to use, with no hidden fees or interest.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -168,6 +170,7 @@
                         Founded in Australia in 2012, Openpay is now available in the UK. We are expanding our retail
                         partners in the UK and Europe, so look out for our logo at checkout.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -179,6 +182,7 @@
                         directed to either create an account or sign in, customise your plan and check your payment
                         details.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -191,6 +195,7 @@
                         Continuous
                         Payment Authority for your payments.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -200,6 +205,7 @@
                         There are no fees or interest, however if you miss a payment a late fee of £7.50 may be charges.
                         Late charges are capped at £15 per plan.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -210,16 +216,17 @@
                         measures
                         to protect your information. Our privacy policy can be viewed here.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
                         How long are repayment lengths?
-
                     </h3>
                     <p>
                         You have the option of a 2 or 3 month plan, with the initial instalment paid at the time of
                         purchase.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -229,6 +236,7 @@
                         Instalments are paid monthly and will be automatically charged to your nominated credit or debit
                         card. You can customise your monthly payment date when you create a new plan.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
             </div>
             <div class="faq-section" id="using-openpay">
@@ -240,10 +248,11 @@
                     <p>
                         Our sign up process asks for a few things to qualify your application. You’ll need to be at
                         least 18 years old and be a United Kingdom resident with a valid government issued photo ID.
-                        We’ll also ask for your email and home address, the credit card (Visa/Mastercard ) or debit card
-                        you want payments to be taken from, and a phone number. All cards used need to be in your name.
-                        See our <a href="./legal">terms and conditions</a> for more detail.
                     </p>
+                    <p> We’ll also ask for your email and home address, the credit card (Visa/Mastercard ) or debit card
+                        you want payments to be taken from, and a phone number. All cards used need to be in your name.
+                        See our <a href="./legal">terms and conditions</a> for more detail.</p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -253,6 +262,7 @@
                         When you create a new plan, you will be asked to pay an initial instalment on that day. This
                         will be either 25% or 33% of the total purchase amount, depending on your plan length.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -262,6 +272,7 @@
                         Openpay works with 3rd party suppliers to verify your ID. This is not a credit check and your
                         privacy is protected.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -271,6 +282,7 @@
                         Openpay performs a soft credit check on all new customers to validate your identity. These
                         checks do not leave a mark on your credit file and are not visible to other lenders.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
             </div>
             <div class="faq-section" id="payments">
@@ -287,6 +299,7 @@
                         If you want to make a payment before a scheduled payment due date, you can make a payment
                         through your account or call customer support on 0800 193 0553 to process a payment.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -296,6 +309,7 @@
                         You can make manual payments as often as you like, but scheduled payments (what you chose when
                         you set up your plan) will be monthly.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -314,6 +328,7 @@
                         leave us a message with your name and contact details and a customer service member will get
                         back to you.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -331,6 +346,7 @@
                     <p>
                         Your bank statement will show Openpay UK Ltd. as the merchant of record.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -342,6 +358,7 @@
                         transaction could be shown as ‘pending’. If you’re unsure if your payment has cleared, check
                         with your bank.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -352,6 +369,7 @@
                         helping you with your budgeting is important to us.. Reach out to us on 0800 193 0553 or via
                         email to support@myopenpay.co.uk and we will discuss what we can do to assist you.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -361,6 +379,7 @@
                         Reach out to us on 0800 193 0553 or via email to support@myopenpay.co.uk and we will discuss
                         what we can do to assist you.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
             </div>
             <div class="faq-section" id="fees">
@@ -370,11 +389,10 @@
                         Are there fees?
                     </h3>
                     <p>
-
                         There are no fees or interest, however if you miss a payment a late charge of £7.50 may be
                         incurred. Late charges are capped at £15 per plan.
-
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
             </div>
             <div class="faq-section" id="returns">
@@ -389,6 +407,7 @@
                         is approved by the merchant, they will inform us. You will receive a full or partial refund of
                         any amounts already paid. All returns are subject to the merchant’s return policy.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -398,6 +417,7 @@
                         Any amounts paid by you will be refunded back onto your nominated card and any future
                         instalments will be cancelled, or adjusted in the case of a partial refund.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -407,6 +427,7 @@
                         Openpay processes your refund as soon as we are notified by the retailer. Sometimes your bank
                         may take 3-5 days to clear the funds back into your account.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
                 <div class="faq-qa">
                     <h3>
@@ -415,6 +436,7 @@
                     <p>
                         Email us on support@myopenpay.co.uk or call us on 0800 193 0553.
                     </p>
+                    <a class="faq-link" href="#">Back to top</a>
                 </div>
             </div>
         </div>
@@ -442,7 +464,7 @@
                 </ul>
             </nav>
             <a href="/">
-                <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
+                <img src="./images/logo-footer.svg" alt="Openpay Logo" loading="lazy" class="footer-logo" />
             </a>
             <p class="copyright">
                 © 2019 Openpay
