--- a/src/register.html
+++ b/src/register.html
@@ -250,7 +250,7 @@
                     </ul>
                 </nav>
                 <a href="/">
-                    <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
+                    <img src="./images/logo-footer.svg" loading="lazy" alt="Openpay Logo" class="footer-logo" />
                 </a>
                 <p class="copyright">
                     © Openpay | Made in Melbourne
