--- a/src/faq.html
+++ b/src/faq.html
@@ -116,7 +116,7 @@
 
     <section class="faq" id="faq">
         <div class="faq__wrapper">
-            <h1>Frequently asked question</h1>
+            <h1>Frequently asked questions</h1>
             <p>
                 Browse our categories to help answer the questions you have.
             </p>
