--- a/src/works.html
+++ b/src/works.html
@@ -186,7 +186,7 @@
         </p>
         <p class="faq__descr">
           See
-          <a href="https://consumer.myopenpay.co.uk/help" class="help__link" target="_blank"
+          <a href="./faq" class="help__link" target="_blank"
             rel="noopener">FAQ</a>
           for details.
         </p>
