--- a/src/faq.html
+++ b/src/faq.html
@@ -308,7 +308,7 @@
                         How do I update my card details?
                     </h3>
                     <p>
-                        You can update your card details in the customer portal. If you’d rather talk to our team, you
+                        You can update your card details through your Openpay account. If you’d rather talk to our team, you
                         can contact us on 0800 193 0553 during business hours (Monday to Friday, 9am-5.30pm GMT).
                     </p>
                     <p>
@@ -327,7 +327,7 @@
                         Can I pay my plan off early?
                     </h3>
                     <p>
-                        Yes, early payments can be made via the portal or with our customer service team by calling
+                        Yes, early payments can be made via your account or with our customer service team by calling
                         customer support on 0800 193 0553. There is no charge for paying early.
                     </p>
                 </div>
