change support email and phone text to links

--- a/src/faq.html
+++ b/src/faq.html
@@ -116,7 +116,7 @@
 
     <section class="faq" id="faq">
         <div class="faq__wrapper">
-            <h1>Frequently asked questions</h1>
+            <h1>Frequently Asked Questions</h1>
             <p>
                 Browse our categories to help answer the questions you have.
             </p>
@@ -243,7 +243,7 @@
                     </p>
                     <p> We’ll also ask for your email and home address, the credit card (Visa/Mastercard ) or debit card
                         you want payments to be taken from, and a phone number. All cards used need to be in your name.
-                        See our <a href="./legal">terms and conditions</a> for more detail.</p>
+                        See our <a href="./legal" class="faq-link">terms and conditions</a> for more detail.</p>
 
                 </div>
                 <div class="faq-qa">
@@ -289,7 +289,7 @@
                     </p>
                     <p>
                         If you want to make a payment before a scheduled payment due date, you can make a payment
-                        through your account or call customer support on 0800 193 0553 to process a payment.
+                        through your account or call customer support on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> to process a payment.
                     </p>
 
                 </div>
@@ -309,7 +309,7 @@
                     </h3>
                     <p>
                         You can update your card details through your Openpay account. If you’d rather talk to our team, you
-                        can contact us on 0800 193 0553 during business hours (Monday to Friday, 9am-5.30pm GMT).
+                        can contact us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> during business hours (Monday to Friday, 9am-5.30pm GMT).
                     </p>
                     <p>
                         If your card is lost or stolen, please update your details or get in touch to arrange a payment
@@ -328,7 +328,7 @@
                     </h3>
                     <p>
                         Yes, early payments can be made via your account or with our customer service team by calling
-                        customer support on 0800 193 0553. There is no charge for paying early.
+                        customer support on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a>. There is no charge for paying early.
                     </p>
                 </div>
                 <div class="faq-qa">
@@ -358,8 +358,8 @@
                     </h3>
                     <p>
                         We want to ensure that you’re able to make your repayments. Don’t wait until a payment fails,
-                        helping you with your budgeting is important to us. Reach out to us on 0800 193 0553 or via
-                        email to support@myopenpay.co.uk and we will discuss what we can do to assist you.
+                        helping you with your budgeting is important to us. Reach out to us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> or via
+                        email to <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a> and we will discuss what we can do to assist you.
                     </p>
 
                 </div>
@@ -368,7 +368,7 @@
                         I missed a payment, what should I do?
                     </h3>
                     <p>
-                        Reach out to us on 0800 193 0553 or via email to support@myopenpay.co.uk and we will discuss
+                        Reach out to us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a> or via email to <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a> and we will discuss
                         what we can do to assist you.
                     </p>
 
@@ -426,7 +426,7 @@
                         Ways to contact us
                     </h3>
                     <p>
-                        Email us on support@myopenpay.co.uk or call us on 0800 193 0553.
+                        Email us on <a href="mailto:support@myopenpay.co.uk" class="faq-link">support@myopenpay.co.uk</a> or call us on <a href="tel:0800 193 0553" class="faq-link">0800 193 0553</a>.
                     </p>
 
                 </div>
